--- a/app/imports/ui/stylesheets/landing_stylesheet.css
+++ b/app/imports/ui/stylesheets/landing_stylesheet.css
@@ -1,6 +1,6 @@
 #landing {
   background: no-repeat;
-  background-image: url("/images/earnit_landing.png");
+  background-image: url("/images/EarnIt_Landing.png");
   background-size: 80%;
   height: 50vw;
   width: auto;
